# data-integrator

./: .vimrc.local  CMakeLists.txt  README.md
cmake/: clang++.cmake  clang-tidy.cmake
include/: data_integrator.hpp  my_funcs.h
src/: CMakeLists.txt  data_integrator.cpp  main.cc  my_funcs.cc
test/: CMakeLists.txt  CMakeLists.txt.in  test_my_funcs.cc
tools/: pre-commit
tools/pre-commit.d/: clang-format
